--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
+            buongiorno.
               <h3 class="masthead-brand">Cover</h3>
               <ul class="nav masthead-nav">
                 <li class="active"><a href="index.html">Home</a></li>
