--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function finish(){
     <div  id="divprincipale">
         <table id="tabfloattitolo" border="0px">
             <tr style="height:30px;width:100%"><td><br />i prezzi <br />più bassi</td></tr>
-            <tr style="height:55px;width:100%"><td> <img src="http://www.thedudu.altervista.org/IMGsito/imgeuro.jpg" style="width:100%;height:53px;" alt="problema connessione errore caricamento immagine" /> </td></tr>
+            <tr style="height:55px;width:100%"><td> <img src="http://www.IMMAGINE RIMOSSA thedudu.altervista.org/IMGsito/imgeuro.jpg" style="width:100%;height:53px;" alt="problema connessione errore caricamento immagine" /> </td></tr>
             <tr style="height:30px;width:100%"><td>la qualità <br />più alta </td></tr>
             <tr style="height:55px;width:100%"><td> <img src="http://www.thedudu.altervista.org/IMGsito/imgcasa.jpg" style="width:100%;height:53px;" alt="problema connessione errore caricamento immagine" /> </td></tr>
         </table>
